==> Manuvr/ManuvrOS/ManuvrOS/Platform/Targets/Teensy3/Teensy3.cpp <==
#include <CommonConstants.h>
#include <Platform/Platform.h>
#include <Platform/Targets/Teensy3/TeensyStorage.h>
#include <wiring.h>
#include <Time/Time.h>
  #include "IntervalTimer.h"

void init_rng() {
  for (uint8_t i = 0; i < PLATFORM_RNG_CARRY_CAPACITY; i++) next_random_int[i] = 0;
  srand(Teensy3Clock.get());          // Seed the PRNG...
}

bool setTimeAndDate(uint8_t y, uint8_t m, uint8_t d, uint8_t wd, uint8_t h, uint8_t mi, uint8_t s) {
  TimeElements tm;
  tm.Second = s;
  tm.Minute = mi;
  tm.Hour   = h;
  tm.Wday   = wd;
  tm.Day    = d;
  tm.Month  = m;
  tm.Year   = y;
  time_t t = makeTime(tm);
  setTime(t);
  return false;
}

int8_t setPinFxn(uint8_t pin, uint8_t condition, FxnPointer fxn) {
  attachInterrupt(pin, fxn, condition);
  return 0;
}

int8_t setPin(uint8_t pin, bool val) {
  digitalWrite(pin, val);
  return 0;
}

int8_t readPin(uint8_t pin) {
  return digitalRead(pin);
}
