==> Manuvr/ManuvrOS/ManuvrOS/Platform/Targets/STM32F7/STM32F7.cpp <==
#include <Platform/Platform.h>
#include "STM32F7.h"
#include <unistd.h>
  #include <FreeRTOS.h>

void init_RNG() {
  for (uint8_t i = 0; i < PLATFORM_RNG_CARRY_CAPACITY; i++) randomness_pool[i] = 0;
  __HAL_RCC_RNG_CLK_ENABLE();
  RNG->CR |= (RNG_CR_RNGEN | RNG_CR_IE);
  HAL_NVIC_SetPriority(RNG_IRQn, 1, 0);  // IRQ channel, priority, pin idex.
  HAL_NVIC_EnableIRQ(RNG_IRQn);
}

bool setTimeAndDate(uint8_t y, uint8_t m, uint8_t d, uint8_t wd, uint8_t h, uint8_t mi, uint8_t s) {
  //RTC_WriteProtectionCmd(DISABLE);
  RTC_EnterInitMode(&rtc);
  RTC_DateTypeDef RTC_DateStructure;
  RTC_TimeTypeDef RTC_TimeStructure;

  /* Set the date: Friday January 11th 2013 */
  RTC_DateStructure.Year    = y;
  RTC_DateStructure.Month   = m;
  RTC_DateStructure.Date    = d;
  RTC_DateStructure.WeekDay = wd;
  HAL_RTC_SetDate(&rtc, &RTC_DateStructure, RTC_FORMAT_BCD);

  /* Set the time to 05h 20mn 00s AM */
  RTC_TimeStructure.TimeFormat = RTC_HOURFORMAT12_AM;
  RTC_TimeStructure.Hours      = h;
  RTC_TimeStructure.Minutes    = mi;
  RTC_TimeStructure.Seconds    = s;
  HAL_RTC_SetTime(&rtc, &RTC_TimeStructure, RTC_FORMAT_BCD);

  /* Let's us determine that we've already setup the peripheral on next run... */
  //RTC_WriteBackupRegister(RTC_BKP_DR0, MANUVR_RTC_STARTUP_GOOD_SET);
  //RTC_WriteProtectionCmd(ENABLE);
  //RTC_ExitInitMode();
  return true;
}

int8_t setPinFxn(uint8_t _pin, uint8_t condition, FxnPointer fxn) {
  uint16_t pin_idx   = (_pin % 16);

  if (0 == __ext_line_bindings[pin_idx].condition) {
    /* There is not presently an interrupt condition on this pin.
       Proceed with impunity.  */
    __ext_line_bindings[pin_idx].pin       = _pin;
    __ext_line_bindings[pin_idx].condition = condition;
    __ext_line_bindings[pin_idx].fxn       = fxn;

    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.Pin    = _associated_pin(_pin);
    GPIO_InitStruct.Speed  = GPIO_SPEED_LOW;
    GPIO_InitStruct.Pull   = GPIO_NOPULL;

    switch (condition) {
      case RISING:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        break;
      case FALLING:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        break;
      case CHANGE:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        break;
      case RISING_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case FALLING_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case CHANGE_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case RISING_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      case FALLING_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      case CHANGE_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      default:
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        break;
    }
    HAL_GPIO_Init(_associated_port(_pin), &GPIO_InitStruct);
    IRQn_Type chan = _get_stm32f7_irq_channel(_pin);
    HAL_NVIC_SetPriority(chan, 1, pin_idx);  // IRQ channel, priority, pin idex.
    HAL_NVIC_EnableIRQ(chan);
  }
  else if (nullptr == __ext_line_bindings[pin_idx].fxn) {
    /* No fxn already occupies the slot, but the def is active. Probably
         already has an event assigned. Ignore the supplied condition and add this
         fxn to the list of things to do. */
    __ext_line_bindings[pin_idx].fxn = fxn;
  }
  else if (__ext_line_bindings[pin_idx].fxn != fxn) {
    StringBuilder local_log("Tried to clobber an existing IRQ event association...\n");
    printEXTIDef(_pin, &local_log);
    Kernel::log(&local_log);
    return -1;
  }
  return 0;
}

int8_t setPin(uint8_t pin, bool val) {
  HAL_GPIO_WritePin(_associated_port(pin), _associated_pin(pin), (val?GPIO_PIN_SET:GPIO_PIN_RESET));
  return 0;
}

int8_t readPin(uint8_t pin) {
  return (GPIO_PIN_SET == HAL_GPIO_ReadPin(_associated_port(pin), _associated_pin(pin)));
}
